adiciona geolocation e browser do capacitor

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "@capacitor/android": "^6.1.2",
     "@capacitor/app": "6.0.1",
+    "@capacitor/browser": "^6.0.2",
     "@capacitor/core": "^6.1.2",
+    "@capacitor/geolocation": "^6.0.1",
     "@capacitor/haptics": "6.0.1",
     "@capacitor/ios": "^6.1.2",
     "@capacitor/keyboard": "6.0.2",
